
Changelog
=========

2018.5.0 (unreleased)
---------------------

- Extend example-content with evil objects containing javascript. [elioschmutz]
- Escape description of document_added description object. [elioschmutz]
- Use plone.protect class of confirm-action view. [elioschmutz]
- Assign correct roles in development content. [deiferni]
- Place successor proposal button next to workflow buttons. [Kevin Bieri]
- Remove document tooltip on touch devices. [Kevin Bieri]
- Respect ISharingConfiguration black- and white_list_prefix for selectable groups in add-team form. [elioschmutz]
- Restrict selectable orgunits on add-team form to orgunits of the current adminunit only. [elioschmutz]
- Update ftw.tabbedview to 4.1.2. [Kevin Bieri]
- Fix dispatching notifications while recording a TaskReminderActivity. [elioschmutz]
- Prefill task-reminder select field on task response form. [elioschmutz]
- Use the same template for default notifiaction email like the daily-digest template. [elioschmutz]
- Update cached docprops on docprops updates. [Rotonen]
- Make sure our Diazo theme doesn't drop data-base-url attribute. [lgraf]
- Bump Plone version to 4.3.18. [Rotonen, lgraf]
- Fix bug with document showroom for sablon and proposal templates. [njohner]
- Bump ftw.solr to 2.3.0 to get patched (optimized) reindexObjectSecurity(). [lgraf]
- Implement asynchronous meeting zip generation, with PDFs from the new demand endpoint. [deiferni, lgraf]
- Add new icon for private folder. [njohner]
- Sharing form: do not show search results multiple times. [phgross]
- Sharing form: fix removal of all role assignments. [phgross]
- Allow pasting templates into template folders. [Rotonen]
- Fix circular imports after using generate_remind_notifications_zopectl_handler entrypoint. [elioschmutz]
- Map gever_admins to the administrator_group in example content. [njohner]
- Fix parent reference number fetching for repository roots. [Rotonen]